MDEV-16174 Assertion `0' failed in Type_handler_string_result::make_sort_key(uchar*, Item*, const SORT_FIELD_ATTR*, Sort_param*)

maybe_null should be always set to TRUE in
Item_func_json_array_append::fix_length_and_dec()